--- a/Marvel_Battle/Views/Base.lproj/Main.storyboard
+++ b/Marvel_Battle/Views/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fpr-a7-8UE">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,11 +12,11 @@
             <objects>
                 <viewController storyboardIdentifier="EJHSearchViewController" id="BYZ-38-t0r" customClass="EJMSearchViewController" customModule="Marvel_Battle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="n6W-py-p70">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="barTintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
@@ -30,16 +30,16 @@
                                 </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Jym-Ty-VuB">
-                                <rect key="frame" x="0.0" y="56" width="414" height="752"/>
+                                <rect key="frame" x="0.0" y="56" width="320" height="502"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="separatorColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <color key="sectionIndexBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="ifc-Ux-Cei">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="320" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ifc-Ux-Cei" id="ucK-68-FLv">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
@@ -73,15 +73,98 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="79.6875"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="r5K-WD-tx1">
+            <objects>
+                <viewController storyboardIdentifier="EJMDetailViewController" id="6Nx-qs-TMR" customClass="EJMDetailViewController" customModule="Marvel_Battle" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="H9M-yD-zlg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J9c-A9-fx1">
+                                <rect key="frame" x="0.0" y="-44" width="320" height="646"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYd-Tn-ol1">
+                                        <rect key="frame" x="15" y="444" width="290" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qTH-Ke-J7L">
+                                        <rect key="frame" x="15" y="386" width="290" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wk-Ml-par">
+                                        <rect key="frame" x="15" y="412" width="290" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="26" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CVw-BU-G6v">
+                                        <rect key="frame" x="15" y="470" width="290" height="123"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="123" id="Gsi-Gn-qmU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Fe-17-kLF">
+                                        <rect key="frame" x="15" y="64" width="290" height="314"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="6wk-Ml-par" firstAttribute="leading" secondItem="J9c-A9-fx1" secondAttribute="leading" constant="15" id="0EM-vT-sEU"/>
+                                    <constraint firstItem="CVw-BU-G6v" firstAttribute="leading" secondItem="J9c-A9-fx1" secondAttribute="leading" constant="15" id="BLN-Cf-kCb"/>
+                                    <constraint firstAttribute="trailing" secondItem="CVw-BU-G6v" secondAttribute="trailing" constant="15" id="CGW-Tv-NGN"/>
+                                    <constraint firstItem="jYd-Tn-ol1" firstAttribute="top" secondItem="6wk-Ml-par" secondAttribute="bottom" constant="11" id="Ddb-23-aCE"/>
+                                    <constraint firstAttribute="trailing" secondItem="1Fe-17-kLF" secondAttribute="trailing" constant="15" id="IYR-OW-SwN"/>
+                                    <constraint firstAttribute="trailing" secondItem="qTH-Ke-J7L" secondAttribute="trailing" constant="15" id="NAe-E6-30N"/>
+                                    <constraint firstItem="6wk-Ml-par" firstAttribute="top" secondItem="qTH-Ke-J7L" secondAttribute="bottom" constant="8" id="X2Q-Cc-znY"/>
+                                    <constraint firstItem="qTH-Ke-J7L" firstAttribute="top" secondItem="1Fe-17-kLF" secondAttribute="bottom" constant="8" id="XPP-NX-Du6"/>
+                                    <constraint firstItem="1Fe-17-kLF" firstAttribute="leading" secondItem="J9c-A9-fx1" secondAttribute="leading" constant="15" id="bBF-94-LP1"/>
+                                    <constraint firstItem="jYd-Tn-ol1" firstAttribute="leading" secondItem="J9c-A9-fx1" secondAttribute="leading" constant="15" id="bdb-He-1dv"/>
+                                    <constraint firstAttribute="trailing" secondItem="6wk-Ml-par" secondAttribute="trailing" constant="15" id="bpc-nJ-m6a"/>
+                                    <constraint firstAttribute="bottom" secondItem="CVw-BU-G6v" secondAttribute="bottom" constant="53" id="cvn-gG-zMa"/>
+                                    <constraint firstItem="1Fe-17-kLF" firstAttribute="top" secondItem="J9c-A9-fx1" secondAttribute="top" constant="64" id="kS3-v1-N8L"/>
+                                    <constraint firstItem="CVw-BU-G6v" firstAttribute="top" secondItem="jYd-Tn-ol1" secondAttribute="bottom" constant="8" id="rqi-YU-nl4"/>
+                                    <constraint firstItem="qTH-Ke-J7L" firstAttribute="leading" secondItem="J9c-A9-fx1" secondAttribute="leading" constant="15" id="uoU-I3-RDQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="jYd-Tn-ol1" secondAttribute="trailing" constant="15" id="xiF-Hb-7Y3"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="J9c-A9-fx1" firstAttribute="leading" secondItem="aYP-JJ-B9T" secondAttribute="leading" id="fCh-1A-ZP3"/>
+                            <constraint firstItem="aYP-JJ-B9T" firstAttribute="bottom" secondItem="J9c-A9-fx1" secondAttribute="bottom" constant="-34" id="qQj-8w-GaK"/>
+                            <constraint firstItem="aYP-JJ-B9T" firstAttribute="trailing" secondItem="J9c-A9-fx1" secondAttribute="trailing" id="qm1-RA-fIT"/>
+                            <constraint firstItem="J9c-A9-fx1" firstAttribute="top" secondItem="aYP-JJ-B9T" secondAttribute="top" constant="-44" id="tdF-jo-zXi"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="aYP-JJ-B9T"/>
+                    </view>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="CVw-BU-G6v" id="DHf-rG-Vlh"/>
+                        <outlet property="imageDetail" destination="1Fe-17-kLF" id="MJX-2Y-jSf"/>
+                        <outlet property="nameLabel" destination="6wk-Ml-par" id="VrR-Bm-PXs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l4d-op-0wm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1951.875" y="81.338028169014081"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Gzr-zW-ETL">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fpr-a7-8UE" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" opaque="NO" alpha="0.0" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="GzG-RX-bKw">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.96381360292434692" green="0.067659825086593628" blue="0.060940198600292206" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.96381360292434692" green="0.067659825086593628" blue="0.060940198600292206" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
