Add icon app and tabbar for aditional function

--- a/Marvel_Battle/Views/Base.lproj/Main.storyboard
+++ b/Marvel_Battle/Views/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Search View Controller-->
+        <!--Search-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="EJHSearchViewController" id="BYZ-38-t0r" customClass="EJMSearchViewController" customModule="Marvel_Battle" customModuleProvider="target" sceneMemberID="viewController">
@@ -30,7 +30,7 @@
                                 </connections>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Jym-Ty-VuB">
-                                <rect key="frame" x="0.0" y="56" width="320" height="502"/>
+                                <rect key="frame" x="0.0" y="56" width="320" height="419"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="separatorColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <color key="sectionIndexBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -59,10 +59,11 @@
                             <constraint firstItem="Jym-Ty-VuB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HPc-dv-h8s"/>
                             <constraint firstItem="n6W-py-p70" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ndf-Mr-XYO"/>
                             <constraint firstItem="Jym-Ty-VuB" firstAttribute="top" secondItem="n6W-py-p70" secondAttribute="bottom" id="g6e-Sc-jze"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Jym-Ty-VuB" secondAttribute="bottom" constant="-34" id="ucS-Pv-zGV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Jym-Ty-VuB" secondAttribute="bottom" id="yzk-nP-rtz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Search" id="beR-Dt-9Ax"/>
                     <navigationItem key="navigationItem" id="0hQ-hR-nPw"/>
                     <connections>
                         <outlet property="searchBar" destination="n6W-py-p70" id="lW4-8J-WZb"/>
@@ -71,7 +72,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="79.6875"/>
+            <point key="canvasLocation" x="1849" y="79"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="r5K-WD-tx1">
@@ -153,7 +154,93 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l4d-op-0wm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1951.875" y="81.338028169014081"/>
+            <point key="canvasLocation" x="2858.4000000000001" y="78.325123152709367"/>
+        </scene>
+        <!--Arena-->
+        <scene sceneID="ORq-Ff-1Ud">
+            <objects>
+                <viewController id="dqS-lL-C7z" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OAU-Jf-bUT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vog-2e-lsl">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Marvel Hero" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yhs-b8-PpJ">
+                                        <rect key="frame" x="15" y="61" width="290" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HeroLeft.png" translatesAutoresizingMaskIntoConstraints="NO" id="6Es-4F-pXp">
+                                        <rect key="frame" x="15" y="149" width="123" height="193"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="123" id="D89-tJ-PNn"/>
+                                            <constraint firstAttribute="height" constant="193" id="MfU-ew-9gd"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HeroRight.png" translatesAutoresizingMaskIntoConstraints="NO" id="xbH-Bi-gSp">
+                                        <rect key="frame" x="181" y="149" width="124" height="195"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="124" id="hdN-13-1Qg"/>
+                                            <constraint firstAttribute="height" constant="195" id="xZr-Sr-fbg"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6CE-Kv-ASX">
+                                        <rect key="frame" x="30" y="369" width="260" height="55"/>
+                                        <color key="backgroundColor" red="0.96381360292434692" green="0.067659825086593628" blue="0.060940198600292206" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="55" id="lXJ-sX-4AN"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="COMBAT"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="6Es-4F-pXp" firstAttribute="top" secondItem="Yhs-b8-PpJ" secondAttribute="bottom" constant="67.5" id="1N6-8l-7gW"/>
+                                    <constraint firstAttribute="bottom" secondItem="6CE-Kv-ASX" secondAttribute="bottom" constant="100" id="1zp-qb-UdT"/>
+                                    <constraint firstAttribute="trailing" secondItem="Yhs-b8-PpJ" secondAttribute="trailing" constant="15" id="4Sg-xp-Tmt"/>
+                                    <constraint firstItem="Yhs-b8-PpJ" firstAttribute="top" secondItem="vog-2e-lsl" secondAttribute="top" constant="61" id="Ggc-i5-7zG"/>
+                                    <constraint firstItem="6CE-Kv-ASX" firstAttribute="leading" secondItem="vog-2e-lsl" secondAttribute="leading" constant="30" id="LW8-um-FQS"/>
+                                    <constraint firstItem="6Es-4F-pXp" firstAttribute="leading" secondItem="vog-2e-lsl" secondAttribute="leading" constant="15" id="MAa-TU-v3S"/>
+                                    <constraint firstItem="Yhs-b8-PpJ" firstAttribute="leading" secondItem="vog-2e-lsl" secondAttribute="leading" constant="15" id="MnJ-3Z-6Xf"/>
+                                    <constraint firstAttribute="trailing" secondItem="xbH-Bi-gSp" secondAttribute="trailing" constant="15" id="SAx-nF-PsV"/>
+                                    <constraint firstAttribute="trailing" secondItem="6CE-Kv-ASX" secondAttribute="trailing" constant="30" id="hDK-vM-dTe"/>
+                                    <constraint firstItem="xbH-Bi-gSp" firstAttribute="top" secondItem="Yhs-b8-PpJ" secondAttribute="bottom" constant="67.5" id="zBU-xY-sWx"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="vog-2e-lsl" firstAttribute="leading" secondItem="o5z-bq-gzt" secondAttribute="leading" id="E2e-Yb-Taq"/>
+                            <constraint firstItem="vog-2e-lsl" firstAttribute="top" secondItem="o5z-bq-gzt" secondAttribute="top" id="WsX-0y-1lG"/>
+                            <constraint firstAttribute="bottom" secondItem="vog-2e-lsl" secondAttribute="bottom" id="aaT-Gt-cU4"/>
+                            <constraint firstItem="vog-2e-lsl" firstAttribute="trailing" secondItem="o5z-bq-gzt" secondAttribute="trailing" id="w1w-O5-Jic"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="o5z-bq-gzt"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Arena" id="wTH-lN-s0w"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3DU-Ss-iug" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1044.375" y="803.87323943661977"/>
+        </scene>
+        <!--Ranking-->
+        <scene sceneID="i5e-6P-TdP">
+            <objects>
+                <viewController id="bAw-it-gBb" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Vx1-mf-Tds">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Ranking" id="IpA-tI-nWg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ma3-2y-DNy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1849" y="-620"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Gzr-zW-ETL">
@@ -169,12 +256,37 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="W8R-mi-ufq"/>
+                        <segue destination="Lgb-wA-RNG" kind="relationship" relationship="rootViewController" id="W8R-mi-ufq"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8iz-y0-SO1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="79.6875"/>
+            <point key="canvasLocation" x="214" y="79"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="KDm-Ed-UNc">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Lgb-wA-RNG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="pts-gG-xbX"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RLc-7a-sSu">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                        <color key="barTintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="TKO-hg-3RN"/>
+                        <segue destination="dqS-lL-C7z" kind="relationship" relationship="viewControllers" id="ROQ-e3-Zmh"/>
+                        <segue destination="bAw-it-gBb" kind="relationship" relationship="viewControllers" id="DJx-Ra-IzU"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q3R-0m-6zR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1047.2" y="79.064039408867004"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="HeroLeft.png" width="679" height="1484"/>
+        <image name="HeroRight.png" width="679" height="1484"/>
+    </resources>
 </document>
